wip add event, request controllers